// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can be configured to always allow multiple blocks 1`] = `
[
  {
    "config": {
      "allowTargetBlank": true,
      "label": "A",
      "multi": "heading2,heading3,heading6,em,list-item,o-list-item,image",
      "placeholder": "Maecenas sed enim",
    },
    "type": "StructuredText",
  },
  {
    "config": {
      "allowTargetBlank": true,
      "label": "A",
      "multi": "heading2,heading3,heading6,em,list-item,o-list-item,image",
      "placeholder": "Maecenas sed enim",
    },
    "type": "StructuredText",
  },
]
`;

exports[`creates a mock Rich Text field model 1`] = `
[
  {
    "config": {
      "allowTargetBlank": undefined,
      "label": "Id",
      "placeholder": "Vitae sapien pellentesque",
      "single": "heading3,heading5,heading6,preformatted,strong,em,list-item,o-list-item,image,embed,hyperlink",
    },
    "type": "StructuredText",
  },
  {
    "config": {
      "allowTargetBlank": undefined,
      "label": "Id",
      "placeholder": "Vitae sapien pellentesque",
      "single": "heading3,heading5,heading6,preformatted,strong,em,list-item,o-list-item,image,embed,hyperlink",
    },
    "type": "StructuredText",
  },
]
`;

exports[`supports number seed 1`] = `
[
  {
    "config": {
      "allowTargetBlank": true,
      "label": "Lectus",
      "placeholder": "Pellentesque pulvinar pellentesque",
      "single": "heading2,heading3,heading4,heading5,heading6,preformatted,em,list-item,embed,hyperlink",
    },
    "type": "StructuredText",
  },
  {
    "config": {
      "allowTargetBlank": true,
      "label": "Lectus",
      "placeholder": "Pellentesque pulvinar pellentesque",
      "single": "heading2,heading3,heading4,heading5,heading6,preformatted,em,list-item,embed,hyperlink",
    },
    "type": "StructuredText",
  },
]
`;
